[gd_scene load_steps=9 format=3 uid="uid://lo32xksvi7sb"]

[ext_resource type="Script" path="res://field.gd" id="1_3kao8"]
[ext_resource type="Script" path="res://Player.gd" id="3_363c6"]
[ext_resource type="Script" path="res://CPU.gd" id="4_0md7o"]
[ext_resource type="Script" path="res://Ball.gd" id="4_yyjas"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejmuw"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42chx"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hiv8r"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t27nk"]
size = Vector2(112, 648)

[node name="Field" type="Node2D"]
script = ExtResource("1_3kao8")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Net" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 566.0
offset_right = 586.0
offset_bottom = 648.0
grow_horizontal = 2

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_363c6")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_ejmuw")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_0md7o")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_ejmuw")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_yyjas")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_42chx")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -10)
shape = SubResource("RectangleShape2D_hiv8r")

[node name="Bottom" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 658)
shape = SubResource("RectangleShape2D_hiv8r")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-56, 324)
shape = SubResource("RectangleShape2D_t27nk")

[node name="ScoreRight" type="Area2D" parent="."]
position = Vector2(1152, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(56, 324)
shape = SubResource("RectangleShape2D_t27nk")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="HUD"]
offset_left = 456.0
offset_top = 5.0
offset_right = 496.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUScore" type="Label" parent="HUD"]
offset_left = 648.0
offset_top = 5.0
offset_right = 688.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
